welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfMaxValue:4: error: type mismatch;
 found   : String("i")
 required: Int
   	return "i"
               ^indexOfMaxValue:2: error: type mismatch;
 found   : Unit
 required: Int
 for (i <- 0 to nums.length-1) {
        ^